force-app/main/default/objects/HP_MajConsentements__c/HP_MajConsentements__c.object-meta.xml
<CustomObject>
    <description>Consements des clients Happe en provenance de Xdata</description>
    <label>Consentement Happe</label>
    <nameField>
        <displayFormat>HPCO-{000000}</displayFormat>
        <label>Nom des Consentements Happe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consentements Happe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>