force-app/main/default/objects/HP_MajConsentements__c/fields/HP_Canal__c.field-meta.xml
<CustomField>
    <fullName>HP_Canal__c</fullName>
    <label>Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>