force-app/main/default/objects/HP_MajConsentements__c/fields/HP_Consentement__c.field-meta.xml
<CustomField>
    <fullName>HP_Consentement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consentement</label>
    <type>Checkbox</type>
</CustomField>