force-app/main/default/objects/HP_MajConsentements__c/fields/HP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HP_Contact__c</fullName>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.HP_IsHappe__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consentements Happe</relationshipLabel>
    <relationshipName>Consentements_Happe</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>