force-app/main/default/objects/HP_MajConsentements__c/fields/HP_DateModification__c.field-meta.xml
<CustomField>
    <fullName>HP_DateModification__c</fullName>
    <label>Date Modification</label>
    <type>DateTime</type>
</CustomField>