force-app/main/default/objects/HP_MajConsentements__c/fields/HP_IdQuestionConsentement__c.field-meta.xml
<CustomField>
    <fullName>HP_IdQuestionConsentement__c</fullName>
    <label>ID Question consentement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>