force-app/main/default/objects/HP_MajConsentements__c/fields/HP_IdQuestionnaireConsentement__c.field-meta.xml
<CustomField>
    <fullName>HP_IdQuestionnaireConsentement__c</fullName>
    <label>ID Questionnaire consentement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>