force-app/main/default/objects/HP_MajConsentements__c/fields/HP_IdTiersConsentement__c.field-meta.xml
<CustomField>
    <fullName>HP_IdTiersConsentement__c</fullName>
    <externalId>true</externalId>
    <label>Id Tiers Consentement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>