force-app/main/default/objects/HP_MajConsentements__c/fields/HP_IdXDATA__c.field-meta.xml
<CustomField>
    <fullName>HP_IdXDATA__c</fullName>
    <label>Id XDATA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>