force-app/main/default/objects/HP_MajConsentements__c/fields/HP_Source__c.field-meta.xml
<CustomField>
    <fullName>HP_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>