force-app/main/default/objects/HP_MajConsentements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HP_Consentement__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_Canal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HP_IdQuestionConsentement__c</columns>
    <columns>HP_IdQuestionnaireConsentement__c</columns>
    <columns>HP_IdXDATA__c</columns>
    <columns>HP_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>